# IOT_Amalthea

./: .gitignore  README.md
Central ESP32-C6/https_request/main/: CMakeLists.txt  stack.c  wifi_connect.c
Central ESP32-C6/https_request/main/include/: wifi_connect.h
Central nRF52840 Connect/nRF_SPI/: CMakeLists.txt
Central nRF52840 Connect/nRF_SPI/boards/: xiao_ble.overlay
Central nRF52840 Connect/nRF_SPI/connect_kit/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
Central nRF52840 Connect/nRF_SPI/connect_kit/Kconfig/: Kconfig.dts  Kconfig.shield  Kconfig.shield.defconfig
Central nRF52840 Connect/nRF_SPI/connect_kit/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.dts  zephyr.dts.pre  zephyr.stat  zephyr.uf2
Central nRF52840 Connect/nRF_SPI/dts/bindings/: custom,handshake-pin.yaml  espressif,esp32.yaml
Central nRF52840 Connect/nRF_SPI/include/: spi_communication.h
Central nRF52840 Connect/nRF_SPI/src/: env_client.c  main.c  spi_communication.c
Central nRF52840 Connect/nRF_SPI/xiao_ble/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
Central nRF52840 Connect/nRF_SPI/xiao_ble/Kconfig/: Kconfig.dts  Kconfig.shield  Kconfig.shield.defconfig
Central nRF52840 Connect/nRF_SPI/xiao_ble/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  dts.cmake  edt.pickle  (+8 more)
(+114 files in other folders)
